[tool.poetry]
name = "grimoirelab-core"
version = "0.1.0"
description = "Core of GrimoireLab"
authors = [
    "GrimoireLab Developers"
]
license = "GPL-3.0+"

readme = "README.md"

homepage = "https://chaoss.github.io/grimoirelab/"
repository = "https://github.com/chaoss/grimoirelab-core"

keywords = [
    "development",
    "grimoirelab"
]

packages = [
    { include = "grimoirelab", from = "src" },
]

classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
   "Topic :: Software Development",
   "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
   "Programming Language :: Python :: 3"
]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/chaoss/grimoirelab-core/issues"


[tool.poetry.dependencies]
python = "^3.8"

django = "^3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
